Add category pages with filtering and Bed category

--- a/index.html
+++ b/index.html
@@ -53,14 +53,15 @@
         <div class="category-nav">
             <div class="container">
                 <div class="category-links">
-                    <a href="#furniture">Furniture</a>
-                    <a href="#sofas">Sofas & Seating</a>
-                    <a href="#mattresses">Mattresses</a>
-                    <a href="#decor">Home Decor</a>
-                    <a href="#furnishings">Furnishings</a>
-                    <a href="#lighting">Lamps & Lighting</a>
-                    <a href="#kitchen">Kitchen & Dining</a>
-                    <a href="#luxury">Luxury</a>
+                    <a href="category.html?cat=furniture">Furniture</a>
+                    <a href="category.html?cat=sofas">Sofas & Seating</a>
+                    <a href="category.html?cat=mattresses">Mattresses</a>
+                    <a href="category.html?cat=bed">Bed</a>
+                    <a href="category.html?cat=decor">Home Decor</a>
+                    <a href="category.html?cat=furnishings">Furnishings</a>
+                    <a href="category.html?cat=lighting">Lamps & Lighting</a>
+                    <a href="category.html?cat=kitchen">Kitchen & Dining</a>
+                    <a href="category.html?cat=luxury">Luxury</a>
                 </div>
             </div>
         </div>
